--- a/03_style.css
+++ b/03_style.css
@@ -1,13 +1,181 @@
-#myButton{
-    width:100px;
-    height: 50px;
-    
-    
-    margin-left:600px;
-    border-radius: 5px;
-    padding:2px;
+#Header{
+    border :1px solid black;
+    margin: 10px;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
 }
-#myButton:hover{
-    transform:scale(1.03);
+
+#Header button{
+    border-radius: 5px;
+    background-color: rgb(149, 181, 210);
+    font-weight: 600;
+    color: rgb(32, 36, 15);
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    padding: 15px;
+    margin: 10px;
+    cursor: pointer;
+}
+ 
+#Header button:hover{
+    background-color: rgb(219, 203, 233);
+    transform: scale(1.05);
+}
+
+#Breadcrumb{
+    border :1px solid rgb(38, 30, 30);
+    margin: 10px;
+    display: flex;
+}
+
+#Breadcrumb a {
+    background-color: rgb(216, 182, 192);
+    padding: 10px;
+    border-right: 5px solid grey;
+}
+#Breadcrumb a:hover {
+    background-color: teal;
+    text-decoration: underline;
+}
+
+#container{
+    border :1px solid rgb(32, 18, 18);
+    margin: 10px;
+    padding: 10px;
+    display: flex;
+}
+
+.folder{
+    background-color: rgb(181, 216, 216);
+    color: black;
+    height: 100px;
+    width: 100px;
     
+    margin: 10px;
+    padding: 10px;
+    border: 2px solid black;
+    border-radius: 10px;
+
+}
+
+.folder div[purpose=name]{
+    margin-top: 40px;
+}
+
+.folder [action]{
+    text-decoration-style: solid;
+    
+    cursor: pointer;
+}
+.folder [action]:hover{
+    color:rgb(165, 40, 138);
+    transform: scale(2);
+}
+
+.text-file {
+    background-color: rgb(128, 188, 208);
+    color: black;
+    height: 100px;
+    width: 100px;
+    
+    margin: 10px;
+    padding: 10px;
+    border: 2px solid black;
+    border-radius: 10px;
+
+}
+
+.text-file div[purpose=name]{
+    margin-top: 40px;
+}
+
+.text-file [action]{
+    text-decoration: beige;
+    cursor: pointer;
+}
+.text-file [action]:hover{
+    color:rgb(151, 12, 12);
+    transform: scale(2);
+}
+
+#templates{
+    border :1px solid black;
+    margin: 10px;
+    padding: 10px;
+}
+
+#app{
+    border: 5px solid blue;
+    margin: 10px;
+    
+}
+
+#app-title-bar{
+    display: flex;
+    background-color: cyan;
+    height: 40px;
+}
+
+#win-actions{
+    margin: 5px;
+    padding: 5px;
+    border : 2px solid black;
+}
+
+#app-title{
+    width:94%;
+    border-right :5px solid red;  
+    text-align: center;
+}
+
+#app-menu-bar{
+    display: flex;
+    background-color: teal;
+    height: 50px;
+}
+
+#app-body{
+    display: flex;
+    background-color: springgreen;
+    height: 500px;
+}
+
+.notepad-body {
+    height: 100%;
+    width: 100%;
+}
+.notepad-body textarea {
+    height: 100%;
+    width: 100%;
+}
+
+.notepad-menu * {
+    margin: 0px 5px;
+    padding: 2px;
+    cursor: pointer;
+    border: 2px solid white;
+    border-radius: 5px;
+}
+
+.notepad-menu span{
+    vertical-align: bottom;
+}
+
+.notepad-menu span:hover{
+    border: 2px solid black;
+    background-color:  white;
+    color:teal;
+}
+.notepad-menu input[type=color]{
+    width: 30px;
+}
+
+.notepad-menu select{
+    height: 30px;
+}
+
+.notepad-menu [pressed=true]{
+    border: 2px solid black;
+    background-color: white;
+    color: teal ;
 }
